@startuml
class PromiseHistoryClient{
- getPromiseHistoryByOrderIdActivity : GetPromiseHistoryByOrderIdActivity

+ PromiseHistoryClient(GetPromiseHistoryByOrderIdActivity)
+ getPromiseHistoryByOrderId(String orderId) : PromiseHistory
}

class GetPromiseHistoryByOrderIdActivity{
- orderDao : ReadOnlyDao<String, Order>
- promiseDao : ReadOnlyDao<String, List<Promise>>

+ GetPromiseHistoryByOrderIdActivity(ReadOnlyDao<String, Order>, ReadOnlyDao<String, List<Promise>>)
+ getPromiseHistoryByOrderId(String orderId) : PromiseHistory
}

class OrderDao{
- omaClient : OrderManipulationAuthorityClient

+ OrderDao(OrderManipulationAuthorityClient)
+ get(String) : Order
- convertToOrderItem(OrderResultItem) : OrderItem
}

class PromiseDao{
- dpsClient : DeliveryPromiseServiceClient
- omaClient : OrderManipulationAuthorityClient

+ PromiseDao(DeliveryPromiseServiceClient, OrderManipulationAuthorityClient)
+ get(String) : List<Promise>
- getDeliveryDateForOrderItem(String) : ZonedDateTime
}

class OrderManipulationAuthorityClient{
- omaService : OrderManipulationAuthority

+ OrderManipulationAuthorityClient(OrderManipulationAuthority)
+ getCustomerOrderByOrderId(String) : OrderResult
+ getCustomerOrderItemByOrderItemId(String) : OrderResultItem
}

class DeliveryPromiseServiceClient{
- dpService : DeliveryPromiseService

+ DeliveryPromiseServiceClient(DeliveryPromiseService)
+ getDeliveryPromiseByOrderItemId(String) : Promise
}

class App {
+ getPromiseHistoryClient : PromiseHistoryClient static
}

class App {
- App ()
+ getPromiseHistoryClient : PromiseHistoryClient static ()
            + getPromiseHistoryByOrderIdActivity : GetPromiseHistoryByOrderIdActivity static ()
            + getPromiseHistoryByOrderIdActivity : GetPromiseHistoryByOrderIdActivity ()
+ getOrderDao : GetOrderDao static ()
            + getPromiseDao : PromiseDao static ()
            + getOrderManipulationAuthorityClient : OrderManipulationAuthorityClient static ()
            + getDeliveryPromiseServiceClient : DeliveryPromiseServiceClient static ()
            + getOrderManipulationAuthority : OrderManipulationAuthority static ()
            + getDeliveryPromiseService :   DeliveryPromiseService static ()
            + getOrderDatastore : OrderDatastore static ()
}

PromiseHistoryClient --> GetPromiseHistoryByOrderIdActivity
GetPromiseHistoryByOrderIdActivity --> OrderDao
OrderDao --> PromiseDao
PromiseDao --> OrderManipulationAuthorityClient
OrderManipulationAuthorityClient --> DeliveryPromiseServiceClient

Order --> OrderItem
PromiseDao --> DeliveryPromiseServiceClient
OrderDao --> OrderManipulationAuthorityClient
GetPromiseHistoryByOrderIdActivity --> PromiseDao
PromiseHistory --> Order
PromiseHistory --> Promise
OrderDao ..|> ReadOnlyDao
PromiseDao ..|> ReadOnlyDao
@enduml